--- a/relatorio-latex/capitulos/07_parte_pratica_PASTA/reverse_tabnabbing_PASTA/evidencia_reverse_tabnabbing.tex
+++ b/relatorio-latex/capitulos/07_parte_pratica_PASTA/reverse_tabnabbing_PASTA/evidencia_reverse_tabnabbing.tex
@@ -12,7 +12,7 @@ Conforme ilustrado na Figura \ref{fig:reverse_tabnabbing_antes}, ao executar o c
 \begin{figure}[hbtp]
     \centering
     \includegraphics[width=0.8\linewidth]{capitulos/07_parte_pratica_PASTA/reverse_tabnabbing_PASTA/img/reverse_tabnabbing_antes.png}
-    \caption{Demonstração da vulnerabilidade de Reverse Tabnabbing. A execução do comando na consola (direita) forçou a aba original (esquerda) a navegar para google.com sem o consentimento do utilizador.}
+    \caption{Demonstração da vulnerabilidade de \textit{Reverse Tabnabbing}. A execução do comando na consola (direita) forçou a aba original (esquerda) a navegar para google.com sem o consentimento do utilizador.}
     \label{fig:reverse_tabnabbing_antes}
 \end{figure}
 
@@ -23,12 +23,13 @@ Após a aplicação dos atributos \texttt{rel="noopener noreferrer"}, o mesmo te
 \begin{figure}[hbtp]
     \centering
     \includegraphics[width=0.8\linewidth]{capitulos/07_parte_pratica_PASTA/reverse_tabnabbing_PASTA/img/reverse_tabnabbing_depois.png}
-    \caption{Bloqueio do ataque de Reverse Tabnabbing. A tentativa de redirecionamento gera um erro na consola (TypeError: Cannot set properties of null), confirmando que a aplicação original está protegida contra manipulação externa.}
+    \caption{Bloqueio do ataque de \textit{Reverse Tabnabbing}. A tentativa de redirecionamento gera um erro na consola (TypeError: Cannot set properties of null), confirmando que a aplicação original está protegida contra manipulação externa.}
     \label{fig:reverse_tabnabbing_depois}
 \end{figure}
 
-Nota sobre Navegadores Modernos
-É importante notar que, embora navegadores modernos baseados em Chromium (v.\,88+) apliquem implicitamente o comportamento \textit{noopener} em links \texttt{target="\_blank"}, a correção explícita implementada é essencial por dois motivos:
+\noindent\textbf{Nota sobre Navegadores Modernos}
+
+É importante notar que, embora os navegadores modernos (\textit{e.g.} baseados em Chromium v.\,88+) apliquem implicitamente o comportamento \textit{noopener} em links \texttt{target="\_blank"}, a correção explícita implementada é essencial por dois motivos:
 
 \begin{itemize}
     \item Garante a compatibilidade e segurança em navegadores mais antigos (\textit{Legacy Support});
