Correção na numeração das figuras e referencias a estas numerações

--- a/relatorio-latex/capitulos/07_parte_pratica_PASTA/7.2.2_Injecoes_inseguras_no_DOM/evidencia_injecoes_inseguras_no_DOM.tex
+++ b/relatorio-latex/capitulos/07_parte_pratica_PASTA/7.2.2_Injecoes_inseguras_no_DOM/evidencia_injecoes_inseguras_no_DOM.tex
@@ -18,7 +18,7 @@ O componente foi então renderizado com esta configuração maliciosa, e no cicl
     \centering
     \includegraphics[width=0.75\textwidth]{capitulos/07_parte_pratica_PASTA/7.2.2_Injecoes_inseguras_no_DOM/img/print4.png}
     \caption{Output do console após a injeção do \emph{payload} malicioso}
-    \label{fig:codigo-corrigido}
+    \label{fig:output}
 \end{figure}
 
 
