--- a/relatorio-latex/capitulos/07_parte_pratica_PASTA/7.2.3_Reforco_da_CSP/evidencia_reforco_da_CSP.tex
+++ b/relatorio-latex/capitulos/07_parte_pratica_PASTA/7.2.3_Reforco_da_CSP/evidencia_reforco_da_CSP.tex
@@ -12,7 +12,7 @@ Para validar a eficácia da \emph{Content-Security-Policy} (CSP), simulámos ten
         \centering
         \includegraphics[width=0.95\textwidth]{capitulos/07_parte_pratica_PASTA/7.2.3_Reforco_da_CSP/img/evidencia1.png}
         \caption{Violação da Content-Security-Policy}
-        \label{fig:codigo-vulneravel}
+        \label{fig:violacaocsp}
     \end{figure}
 
     \item \textbf{Tentativa de carregar um objeto potencialmente inseguro:} 
@@ -25,14 +25,14 @@ Para validar a eficácia da \emph{Content-Security-Policy} (CSP), simulámos ten
         \centering
         \includegraphics[width=0.95\textwidth]{capitulos/07_parte_pratica_PASTA/7.2.3_Reforco_da_CSP/img/evidencia2.png}
         \caption{Executar código inline não autorizado}
-        \label{fig:codigo-vulneravel}
+        \label{fig:codigonaoautorizado}
     \end{figure}
 
     \begin{figure}[hbtp]
         \centering
         \includegraphics[width=0.95\textwidth]{capitulos/07_parte_pratica_PASTA/7.2.3_Reforco_da_CSP/img/evidencia3.png}
         \caption{Resultado de código inline não autorizado}
-        \label{fig:codigo-vulneravel}
+        \label{fig:codigoinline}
     \end{figure}
 
     \item \textbf{Tentativa de executar código inline não autorizado:} 
@@ -44,7 +44,7 @@ Para validar a eficácia da \emph{Content-Security-Policy} (CSP), simulámos ten
         \centering
         \includegraphics[width=0.95\textwidth]{capitulos/07_parte_pratica_PASTA/7.2.3_Reforco_da_CSP/img/evidencia4.png}
         \caption{Unsafe eval bloquedo pelo CSP}
-        \label{fig:codigo-vulneravel}
+        \label{fig:unsageeval}
     \end{figure}
 \end{enumerate}
 
