--- a/relatorio-latex/relatorio.tex
+++ b/relatorio-latex/relatorio.tex
@@ -40,6 +40,10 @@
 \usepackage{url}
 \usepackage{graphicx} % incluir imagens
 \usepackage{float} % fornece o modificador [H] para figuras
+\usepackage{booktabs}  % table
+\usepackage{tabularx}  % table
+\usepackage{ragged2e}  % table
+\usepackage{float} % table positioneed right
 
 \usepackage{geometry}
 \geometry{margin=2.5cm} % diminuir a margem
