--- a/relatorio-latex/capitulos/07_parte_pratica_PASTA/7.2.2_Injecoes_inseguras_no_DOM/correcao_injecoes_inseguras_no_DOM.tex
+++ b/relatorio-latex/capitulos/07_parte_pratica_PASTA/7.2.2_Injecoes_inseguras_no_DOM/correcao_injecoes_inseguras_no_DOM.tex
@@ -8,7 +8,7 @@ pode ser interpretado pelo navegador como código executável, permitindo a ocor
 de ataques do tipo DOM-based XSS. A Figura~\ref{fig:codigo-vulneravel} apresenta o 
 trecho vulnerável.
 
-\begin{figure}[hbtp]
+\begin{figure}[H]
     \centering
     \includegraphics[width=0.95\textwidth]{capitulos/07_parte_pratica_PASTA/7.2.2_Injecoes_inseguras_no_DOM/img/Figura2.png}
     \caption{Exemplo de código vulnerável XSS}
@@ -22,7 +22,7 @@ controlada e atribui-a ao elemento \texttt{<style>} através de \emph{children} 
 React, impedindo a interpretação de conteúdo arbitrário. O código corrigido encontra-se 
 representado na Figura~\ref{fig:codigo-corrigido}.
 
-\begin{figure}[hbtp]
+\begin{figure}[H]
     \centering
     \includegraphics[width=0.95\textwidth]{capitulos/07_parte_pratica_PASTA/7.2.2_Injecoes_inseguras_no_DOM/img/Figura3.png}
     \caption{Exemplo do código corrigido}
