--- a/relatorio-latex/capitulos/07_parte_pratica_PASTA/7.2.2_Injecoes_inseguras_no_DOM/evidencia_injecoes_inseguras_no_DOM.tex
+++ b/relatorio-latex/capitulos/07_parte_pratica_PASTA/7.2.2_Injecoes_inseguras_no_DOM/evidencia_injecoes_inseguras_no_DOM.tex
@@ -14,7 +14,7 @@ Caso o componente ainda estivesse vulnerável, o código contido dentro da tag \
 
 O componente foi então renderizado com esta configuração maliciosa, e no ciclo de vida \texttt{useEffect()} foi registado no console o valor observado de \texttt{window.HACKED}, conforme o exemplo:
 
-\begin{figure}[hbtp]
+\begin{figure}[H]
     \centering
     \includegraphics[width=0.75\textwidth]{capitulos/07_parte_pratica_PASTA/7.2.2_Injecoes_inseguras_no_DOM/img/print4.png}
     \caption{Output do console após a injeção do \emph{payload} malicioso}
