--- a/relatorio-latex/capitulos/07_parte_pratica_PASTA/7.2.3_Reforco_da_CSP/correcao_reforco_da_CSP.tex
+++ b/relatorio-latex/capitulos/07_parte_pratica_PASTA/7.2.3_Reforco_da_CSP/correcao_reforco_da_CSP.tex
@@ -6,7 +6,7 @@ A CSP é um dos mecanismos mais eficazes para reduzir a superfície de ataque de
 
 A política final implementada encontra-se abaixo:
 
-\begin{figure}[hbtp]
+\begin{figure}[H]
     \centering
     \includegraphics[width=0.95\textwidth]{capitulos/07_parte_pratica_PASTA/7.2.3_Reforco_da_CSP/img/correcao1.png}
     \caption{Politica final implementada de Content-Security-Policy}
