--- a/relatorio-latex/capitulos/07_parte_pratica_PASTA/open_redirect/open_redirect_correcao.tex
+++ b/relatorio-latex/capitulos/07_parte_pratica_PASTA/open_redirect/open_redirect_correcao.tex
@@ -22,7 +22,7 @@ User.loginWithRedirect(window.location.pathname)
 
 As alterações realizadas no código-fonte podem ser visualizadas na Figura \ref{fig:github_open_redirect}.
 
-\begin{figure}[hbtp]
+\begin{figure}[H]
     \centering
     \includegraphics[width=0.95\textwidth]{capitulos/07_parte_pratica_PASTA/open_redirect/img/open_redirect_github.png}
     \caption{Diff do GitHub mostrando a correção do Open Redirect}
