--- a/relatorio-latex/capitulos/07_parte_pratica_PASTA/open_redirect/open_redirect_evidencia.tex
+++ b/relatorio-latex/capitulos/07_parte_pratica_PASTA/open_redirect/open_redirect_evidencia.tex
@@ -34,7 +34,7 @@ Em ambos os casos, o comportamento observado foi o mesmo: o mock registou sempre
 
 A evidência deste comportamento no console do navegador é apresentada na Figura \ref{fig:devtools_open_redirect}.
 
-\begin{figure}[hbtp]
+\begin{figure}[H]
     \centering
     \includegraphics[width=0.95\textwidth]{capitulos/07_parte_pratica_PASTA/open_redirect/img/open_redirect_devtools.png}
     \caption{Validação da correção via Developer Tools}
